--- a/src/lab-exercises-full.ipynb
+++ b/src/lab-exercises-full.ipynb
@@ -624,12 +624,12 @@
     "            )\n",
     "            & Plot.html(\n",
     "                Plot.js(\n",
-    "                    \"\"\"`camera = Pose([${$state.camera.p.map((x) => x.toFixed(2))}], ${$state.camera.hd.toFixed(2)})`\"\"\"\n",
+    "                    \"\"\"`camera = Pose([${Array.from($state.camera.p, (x) => x.toFixed(2))}], ${$state.camera.hd.toFixed(2)})`\"\"\"\n",
     "                )\n",
     "            )\n",
     "            & Plot.html(\n",
     "                Plot.js(\"\"\"$state.target_exists ?\n",
-    "                                `target = Pose([${$state.target.p.map((x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})` : ''\"\"\")\n",
+    "                                `target = Pose([${Array.from($state.target.p, (x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})` : ''\"\"\")\n",
     "            )\n",
     "            & bottom_elements\n",
     "        )\n",
@@ -1313,7 +1313,7 @@
     "# Plot.html(\"Click-drag on pose to change location.  Shift-click-drag on pose to change heading.\") | (\n",
     "#     world_plot\n",
     "#     + pose_widget(\"pose\", some_pose, color=\"blue\")\n",
-    "# ) | Plot.html(js(\"`pose = Pose([${$state.pose.p.map((x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"))\n",
+    "# ) | Plot.html(js(\"`pose = Pose([${Array.from($state.pose.p, (x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"))\n",
     "\n",
     "# some_poses = jax.vmap(random_pose)(jax.random.split(key, 20))\n",
     "# (\n",
@@ -1332,7 +1332,7 @@
     "#         + plot_sensors(js(\"$state.pose\"), js(\"$state.pose_readings\"), sensor_angles, show_legend=True)\n",
     "#         + pose_widget(\"pose\", some_pose, color=\"blue\")\n",
     "#     )\n",
-    "#     | Plot.html(js(\"`pose = Pose([${$state.pose.p.map((x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"))\n",
+    "#     | Plot.html(js(\"`pose = Pose([${Array.from($state.pose.p, (x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"))\n",
     "#     | Plot.initialState({\n",
     "#         \"pose_readings\": ideal_sensor(some_pose)\n",
     "#     })\n",
@@ -1367,7 +1367,7 @@
     "#         + pose_widget(\"pose\", some_pose, color=\"blue\")\n",
     "#     )\n",
     "#     | noise_slider(\"noise_slider\", \"Sensor noise =\", model_sensor_noise)\n",
-    "#     | Plot.html(js(\"`pose = Pose([${$state.pose.p.map((x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"))\n",
+    "#     | Plot.html(js(\"`pose = Pose([${Array.from($state.pose.p, (x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"))\n",
     "#     | Plot.initialState({\n",
     "#         \"k\": jax.random.key_data(k1),\n",
     "#         \"pose_readings\": noisy_sensor(k2, some_pose, model_sensor_noise)\n",
@@ -1464,8 +1464,8 @@
     "#             ],\n",
     "#             \"show target pose\"\n",
     "#         ])\n",
-    "#         & Plot.html(js(\"`guess = Pose([${$state.guess.p.map((x) => x.toFixed(2))}], ${$state.guess.hd.toFixed(2)})`\"))\n",
-    "#         & Plot.html(js(\"`target = Pose([${$state.target.p.map((x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})`\"))\n",
+    "#         & Plot.html(js(\"`guess = Pose([${Array.from($state.guess.p, (x) => x.toFixed(2))}], ${$state.guess.hd.toFixed(2)})`\"))\n",
+    "#         & Plot.html(js(\"`target = Pose([${Array.from($state.target.p, (x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})`\"))\n",
     "#     )\n",
     "#     | Plot.initialState(\n",
     "#         {\n",
@@ -1539,7 +1539,7 @@
     "#         Plot.html(\n",
     "#             # For some reason `toFixed` very stubbonrly malfunctions in the following line:\n",
     "#             Plot.js(\"\"\"$state.target_exists ?\n",
-    "#                                 `best = Pose([${$state.best.p.map((x) => x.toFixed(2))}], ${$state.best.hd.toFixed(2)})` : ''\"\"\")\n",
+    "#                                 `best = Pose([${Array.from($state.best.p, (x) => x.toFixed(2))}], ${$state.best.hd.toFixed(2)})` : ''\"\"\")\n",
     "#         )\n",
     "#     ),\n",
     "#     initial_state={\n",
@@ -1665,7 +1665,7 @@
     "#         + pose_widget(\"start\", robot_inputs[\"start\"], color=Plot.constantly(\"start pose\"))\n",
     "#         + Plot.color_map({\"start pose\": \"blue\", \"path from integrating controls (UNphysical)\": \"green\"})\n",
     "#     )\n",
-    "#     | Plot.html(js(\"`start = Pose([${$state.start.p.map((x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"))\n",
+    "#     | Plot.html(js(\"`start = Pose([${Array.from($state.start.p, (x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"))\n",
     "#     | Plot.initialState({\n",
     "#         \"path\": integrate_controls_unphysical(robot_inputs)\n",
     "#     })\n",
@@ -1684,7 +1684,7 @@
     "#         + pose_widget(\"start\", robot_inputs[\"start\"], color=Plot.constantly(\"start pose\"))\n",
     "#         + Plot.color_map({\"start pose\": \"blue\", \"path from integrating controls (physical)\": \"green\"})\n",
     "#     )\n",
-    "#     | Plot.html(js(\"`start = Pose([${$state.start.p.map((x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"))\n",
+    "#     | Plot.html(js(\"`start = Pose([${Array.from($state.start.p, (x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"))\n",
     "#     | Plot.initialState({\n",
     "#         \"path\": integrate_controls_physical(robot_inputs)\n",
     "#     })\n",
