--- a/src/localization-tutorial.ipynb
+++ b/src/localization-tutorial.ipynb
@@ -419,7 +419,7 @@
     "    )\n",
     "    | Plot.html(\n",
     "        js(\n",
-    "            \"`pose = Pose([${$state.pose.p.map((x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"\n",
+    "            \"`pose = Pose([${Array.from($state.pose.p, (x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"\n",
     "        )\n",
     "    )\n",
     ")  # fmt: skip"
@@ -620,7 +620,7 @@
     "    )\n",
     "    | Plot.html(\n",
     "        js(\n",
-    "            \"`pose = Pose([${$state.pose.p.map((x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"\n",
+    "            \"`pose = Pose([${Array.from($state.pose.p, (x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"\n",
     "        )\n",
     "    )\n",
     "    | Plot.initialState({\"pose_readings\": ideal_sensor(some_pose)})\n",
@@ -873,7 +873,7 @@
     "    | noise_slider(\"noise_slider\", \"Sensor noise =\", model_sensor_noise)\n",
     "    | Plot.html(\n",
     "        js(\n",
-    "            \"`pose = Pose([${$state.pose.p.map((x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"\n",
+    "            \"`pose = Pose([${Array.from($state.pose.p, (x) => x.toFixed(2))}], ${$state.pose.hd.toFixed(2)})`\"\n",
     "        )\n",
     "    )\n",
     "    | Plot.initialState(\n",
@@ -1085,12 +1085,12 @@
     "        )\n",
     "        & Plot.html(\n",
     "            js(\n",
-    "                \"`guess = Pose([${$state.guess.p.map((x) => x.toFixed(2))}], ${$state.guess.hd.toFixed(2)})`\"\n",
+    "                \"`guess = Pose([${Array.from($state.guess.p, (x) => x.toFixed(2))}], ${$state.guess.hd.toFixed(2)})`\"\n",
     "            )\n",
     "        )\n",
     "        & Plot.html(\n",
     "            js(\n",
-    "                \"`target = Pose([${$state.target.p.map((x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})`\"\n",
+    "                \"`target = Pose([${Array.from($state.target.p, (x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})`\"\n",
     "            )\n",
     "        )\n",
     "    )\n",
@@ -1398,12 +1398,12 @@
     "            )\n",
     "            & Plot.html(\n",
     "                Plot.js(\n",
-    "                    \"\"\"`camera = Pose([${$state.camera.p.map((x) => x.toFixed(2))}], ${$state.camera.hd.toFixed(2)})`\"\"\"\n",
+    "                    \"\"\"`camera = Pose([${Array.from($state.camera.p, (x) => x.toFixed(2))}], ${$state.camera.hd.toFixed(2)})`\"\"\"\n",
     "                )\n",
     "            )\n",
     "            & Plot.html(\n",
     "                Plot.js(\"\"\"$state.target_exists ?\n",
-    "                                `target = Pose([${$state.target.p.map((x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})` : ''\"\"\")\n",
+    "                                `target = Pose([${Array.from($state.target.p, (x) => x.toFixed(2))}], ${$state.target.hd.toFixed(2)})` : ''\"\"\")\n",
     "            )\n",
     "            & bottom_elements\n",
     "        )\n",
@@ -1507,7 +1507,7 @@
     "        Plot.html(\n",
     "            # For some reason `toFixed` very stubbonrly malfunctions in the following line:\n",
     "            Plot.js(\"\"\"$state.target_exists ?\n",
-    "                                `best = Pose([${$state.best.p.map((x) => x.toFixed(2))}], ${$state.best.hd.toFixed(2)})` : ''\"\"\")\n",
+    "                                `best = Pose([${Array.from($state.best.p, (x) => x.toFixed(2))}], ${$state.best.hd.toFixed(2)})` : ''\"\"\")\n",
     "        )\n",
     "    ),\n",
     "    initial_state={\n",
@@ -1889,7 +1889,7 @@
     "    )\n",
     "    | Plot.html(\n",
     "        js(\n",
-    "            \"`start = Pose([${$state.start.p.map((x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"\n",
+    "            \"`start = Pose([${Array.from($state.start.p, (x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"\n",
     "        )\n",
     "    )\n",
     "    | Plot.initialState({\"path\": integrate_controls_unphysical(robot_inputs)})\n",
@@ -2026,7 +2026,7 @@
     "    )\n",
     "    | Plot.html(\n",
     "        js(\n",
-    "            \"`start = Pose([${$state.start.p.map((x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"\n",
+    "            \"`start = Pose([${Array.from($state.start.p, (x) => x.toFixed(2))}], ${$state.start.hd.toFixed(2)})`\"\n",
     "        )\n",
     "    )\n",
     "    | Plot.initialState({\"path\": integrate_controls_physical(robot_inputs)})\n",
